no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2040,8 +2040,6 @@ copyFile(PATH, PATH2[, NUM][, FUNC(ERROR)])     #NUM is an or'd flag:
                                                 #  - COPYFILE_EXCL: fail if PATH2 already exists
 rename(PATH, PATH2, FUNC(ERROR))                #Cannot be done between partitions on Linux (see move-file doc)
 
-[f]truncate(PATH|FD_INT, UINT, FUNC(ERROR))     #
-
 [f|l]chown(PATH|FD_INT, UID, GID, FUNC(ERROR))  #Noop on Windows
 [f|l]chmod(PATH|FD_INT, UINT, FUNC(ERROR))      #See above for Windows behavior
                                                 #lchmod() is only on Mac
@@ -2077,9 +2075,6 @@ symlink(PATH, PATH2[, STR], FUNC(ERROR))        #STR is 'dir', 'file' or 'juncti
                                             <12*#Def: 'file'
                                              12*#Def: 'file|dir' depending on PATH
 link(PATH, PATH2, FUNC(ERROR))                  #Hardlink
-GULP-SYMLINK.relative|absolute                 ##Creates a symlink in DIR (creates it if not existing, overwrite if OBJ.force
-(DIR_ARR|FUNC(VINYL)->VINYL[,OBJ])             ##true) with same filename as current file, poiting to that file (with a
-                                               ##relative|absolute path). Version 2.0.1
 readlink(PATH[, OBJ], FUNC(ERROR, PATH2))       #Follow symlink (only once)
                                                 #PATH must be a symlink
                                                 #OBJ: encoding 'ENCODING'
@@ -2087,6 +2082,7 @@ realpath[.native]                               #Like normalize(), but also foll
  (PATH[, OBJ], FUNC(ERROR, PATH2))              #OBJ: encoding 'ENCODING'
                                                 #If "native" does not cache and do less normalization
 
+[f]truncate(PATH|FD_INT, UINT, FUNC(ERROR))     #
 unlink(PATH, FUNC(ERROR))                       #
 rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
                                              12*#  - recursive BOOL (def: false):
@@ -2096,6 +2092,7 @@ rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
                                              12*#     - retry NUM times with linear backoff (starting at OPTS.retryDelay NUMms (def: 100)) on
                                              12*#       EBUSY, ENOTEMPTY, EPERM, EMFILE or ENFILE
                                              12*#     - requires OPTS.recursive true
+                                        14.14.0*#Should use fs.rm() instead
 
 mkdir(PATH[, MODE_INT|OPTS],                    #OPTS:
  FUNC(ERROR[, 'PATH2']))                        #  - mode MODE_INT (def: 0777) (see above for Windows behavior)
@@ -2212,22 +2209,6 @@ createWriteStream(PATH[, OPTS])->OSTREAM        #OPTS has members flags, default
                                                 #  - bytesWritten UINT
 
 mkdtemp('PATH', FUNC(ERROR, 'PATH2'))           #Create temp file at 'PATHrandom', with random being 6 chars [:alnum:] (36 bits of entropy)
-TEMP.open(PREFIX, FUNC(ERROR, OBJ))            ##Creates temp file with permission 0600 under temp directory.
-                                               ##OBJ:
-                                               ##  - path STR
-                                               ##  - fd NUM
-                                               ##PREFIX:
-                                               ##  - OBJ: prefix STR, suffix STR, dir DIR (def: "", "", OS temp dir)
-                                               ##  - STR: only PREFIX_STR
-                                               ##  - Path will be TMP_DIR/PREFIX-UUID-AFFIX
-                                               ##If TEMP.track() called before, it will erase file on process exit.
-                                               ##Version 0.8.1
-TEMP.mkdir(PREFIX,FUNC(ERROR,PATH))            ##Same with directory
-TEMP.createWriteStream()                       ##Same for file as OSTREAM
-TEMP.path(PREFIX)                              ##Same for only the path
-TEMP.cleanup(FUNC(ERROR,OBJ))                  ##Remove temp files. TEMP.track() must have been called before.
-                                               ##OBJ: files|dirs NUM
-
 
 watch('FILE|DIR'[, OPTS][, FUNC])->FSWATCHER    #FSWATCHER fires events when file changes name or content.
                                                 #OPTS:
@@ -2251,7 +2232,6 @@ STATWATCHER                                  14*#
 STATWATCHER.[un]ref()                        14*#
 
 constants                                       #Low-level file-system constants, for the current OS
-
 
 FS.promises                                     #Like FS but:
                                                 #  - return PROMISE instead
