no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2083,8 +2083,8 @@ realpath[.native]                               #Like normalize(), but also foll
                                                 #If "native" does not cache and do less normalization
 
 [f]truncate(PATH|FD_INT, UINT, FUNC(ERROR))     #
-unlink(PATH, FUNC(ERROR))                       #
-rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
+unlink(PATH, FUNC(ERROR))                       #Delete file.
+rmdir(PATH, FUNC(ERROR)[, OPTS])                #Delete directory. OPTS:
                                              12*#  - recursive BOOL (def: false):
                                              12*#     - recursively on children
                                              12*#     - no error if PATH does not exist. However, this is deprecated.
@@ -2093,6 +2093,15 @@ rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
                                              12*#       EBUSY, ENOTEMPTY, EPERM, EMFILE or ENFILE
                                              12*#     - requires OPTS.recursive true
                                         14.14.0*#Should use fs.rm() instead
+rm(PATH, FUNC(ERROR)[, OPTS])           14.14.0*#Delete file|dir.
+                                        14.14.0*#OPTS:
+                                        14.14.0*#  - force BOOL: if false (def): throw if file does not exist
+                                        14.14.0*#  - recursive BOOL (def: false):
+                                        14.14.0*#     - whether to allow deleting directory
+                                        14.14.0*#  - maxRetries NUM (def: 0)
+                                        14.14.0*#     - retry NUM times with linear backoff (starting at OPTS.retryDelay NUMms (def: 100)) on
+                                        14.14.0*#       EBUSY, ENOTEMPTY, EPERM, EMFILE or ENFILE
+                                        14.14.0*#     - requires OPTS.recursive true
 
 mkdir(PATH[, MODE_INT|OPTS],                    #OPTS:
  FUNC(ERROR[, 'PATH2']))                        #  - mode MODE_INT (def: 0777) (see above for Windows behavior)
