no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -39,7 +39,7 @@ CONF.root                         #BOOL. If true, do not look in parent director
 CONF.extends 'PACKAGE|FILE'[_ARR] #Merges a base CONF2
                                   #Uses FILE or package eslint-config-PACKAGE which:
                                   #  - exports CONF_OBJ
-                                  #  - has eslint as deepDependencies
+                                  #  - has eslint as peerDependencies
                                   #  - can have several configs, by creating PACKAGE/FILE.js,
                                   #    and specifying extends 'PACKAGE/FILE'
                                   #Can be:
