no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -11,7 +11,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
                                             NUM*#  - introduced by Node NUM.*.* (starting at Node 9)
-                                               *#  - not Node 14.10.1
+                                               *#  - not Node 15.0.1
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
                                               ||#  - a non-core Babel plugin exists
@@ -927,9 +927,9 @@ VAL && VAL2                                     #Same as VAL ? VAL : VAL2
 VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
 VAL ?? VAL2                            14.0.0*-|#Same as VAL == null ? VAL : VAL2
 
-VAR &&= VAL2                                 *-|#Same as VAR = VAR && VAL2
-VAR ||= VAL2                                 *-|#Same as VAR = VAR || VAL2
-VAR ??= VAL2                           14.0.0*-|#Same as VAR = VAR ?? VAL2
+VAR &&= VAL2                           15.0.0*-|#Same as VAR = VAR && VAL2
+VAR ||= VAL2                           15.0.0*-|#Same as VAR = VAR || VAL2
+VAR ??= VAL2                           15.0.0*-|#Same as VAR = VAR ?? VAL2
 
 VAL1, VAL2                                      #Evaluates both, but returns VAL2.
                                                 #Use case: in for or while loops.
@@ -1103,8 +1103,8 @@ STR.replace(REGEXP|STR2, STR3)                  #Returns STR, replacing REGEXP w
 STR.replace(REGEXP|STR2,
  FUNC($&, $1..., INDEX, STR))                   #Returns STR, replacing REGEXP with FUNC(...)
 STR.replaceAll(REGEXP|STR2, STR3)
-STR.replaceAll(REGEXP|STR2,                  *-|#Same as STR.replace(...) but STR2 implies a 'g' flag.
- FUNC($&, $1..., INDEX, STR))                *-|#If REGEXP, must have a 'g' flag.
+STR.replaceAll(REGEXP|STR2,            15.0.0*-|#Same as STR.replace(...) but STR2 implies a 'g' flag.
+ FUNC($&, $1..., INDEX, STR))          15.0.0*-|#If REGEXP, must have a 'g' flag.
 STR.split(REGEXP|STR2[, UINT])                  #Returns an ARR, with REGEXP|STR2 being split delimiter.
                                                 #If STR2 is '', means between each characters.
                                                 #If REGEXP contains parenthesis groups, each is included in ARR between
@@ -1323,8 +1323,7 @@ new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                          12*-|||#       gallon[-imperial]|[milli|centi|deci|hecto|mega]liter|pint[-metric]|quart|tablespoon|teaspoon
                                          12*-|||#  - unitDisplay 'narrow', 'short' or 'long'
                                             -|||#Relevant LOCALE_ARGS: nu
-NUMBERFORMAT.format(ARG)->STR               -|||#ARG is NUM|BIGINT
-                                          *-|||~#or STR
+NUMBERFORMAT.format(ARG)->STR               -|||#ARG is NUM|BIGINT|STR
 NUM|BIGINT.toLocaleString([LOCALEOPTS])->STR-|||#
 NUMBERFORMAT.formatToParts(NUM|BIGINT)      -|||#OBJ_ARR:
  ->OBJ_ARR                                  -|||#  - type STR:
@@ -1920,9 +1919,9 @@ Promise.allSettled(VAL|PROMISABLE_ITERABL) 12*-|#Same but instead:
                                            12*-|#     - status 'fulfilled|rejected'
                                            12*-|#     - value VAL2 (if resolved)
                                            12*-|#     - reason VAL2 (if rejected)
-Promise.any(VAL|PROMISABLE_ITERABLE)         *-|#Same but instead:
-                                             *-|#  - if any PROMISABLE resolved with VAL2 -> resolved with VAL2
-                                             *-|#  - if all PROMISABLE rejected -> rejected with AGGREGATE_ERROR: errors VAL2_ARR
+Promise.any(VAL|PROMISABLE_ITERABLE)   15.0.0*-|#Same but instead:
+                                       15.0.0*-|#  - if any PROMISABLE resolved with VAL2 -> resolved with VAL2
+                                       15.0.0*-|#  - if all PROMISABLE rejected -> rejected with AGGREGATE_ERROR: errors VAL2_ARR
 
 async function [*] [FUNC](...) {...}          -|#Returns FUNC2(...)->PROMISE, where FUNC can:
 [class ...] { async [*] FUNC() {...} ... }    -|#  - return VAL -> resolve PROMISE with VAL
