--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -12,10 +12,20 @@
                                              \=+===============================+=/
 
 
+To document:
+  - timers/promises
+  - AbortController, AbortSignal
+  - MessageChannel, MessageEvent, MessagePort
+  - --node-memory-debug
+  - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
+  - fix log-process-errors for new unhandled rejections behavior
+  - NET.blockList
+  - NET.createQuicSocket(), Quic
+
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.14.0 (current), 13.14.0 (current), 12.19.0 (active LTS), 10.22.1 (active LTS)
+VERSION ==>                                     #15.0.1 (current), 13.14.0 (current), 12.19.0 (active LTS), 10.22.1 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -316,12 +326,12 @@ EventTarget                                  14*#Like DOM except:
                                              14*#Notable differences between DOM EventTarget and Node.js EventEmitter:
                                              14*#  - listeners can be either FUNC or { handleEvent() }
                                              14*#  - cannot add same listener several times to same OBJ
-                                             14*#Not exposed globally
+                                         15.0.0*#Exposed globally
 NodeEventTarget                              14*#Child of EventTarget that mixes most Node.js EventEmitter properties|methods:
                                              14*#  - only on|once|off|removeListener|removeAllListeners|listeners|listenerCount|eventNames|*etMaxListeners|defaultMaxListeners
                                              14*#Not exposed globally
 Event                                        14*#Like DOM.
-                                             14*#Not exposed globally
+                                         15.0.0*#Exposed globally
 
 
                                              /=+===============================+=\
@@ -1869,6 +1879,7 @@ new Resolver([OPTS])                            #RESOLVER
                                                 #In following methods, if RESOLVER is missing, use builtin RESOLVER
 [RESOLVER.]resolve
  ('HOST'[, STR2], FUNC(ERROR, VAL_ARR))         #Same as lookup() but STR2 can any PTR record type: "A" (def), "AAAA", "MX", "TXT", "SRV", "PTR", "NS", "CNAME", "SOA", "NAPTR" or "ANY" (guesses)
+                                         15.0.0*#Or "CAA"
 [RESOLVER.]resolveSTR2                          #Same. STR2 is camelcase, and "A"|"AAAA"->4|6
  ('HOST', [OBJ, ]FUNC(ERROR, VAL_ARR))          #OBJ (only with records "A"|"AAAA"):
                                                 #  - ttl BOOL: if true (def: false), VAL is { address STR, ttl NUM }
@@ -2084,15 +2095,11 @@ realpath[.native]                               #Like normalize(), but also foll
 
 [f]truncate(PATH|FD_INT, UINT, FUNC(ERROR))     #
 unlink(PATH, FUNC(ERROR))                       #Delete file.
-rmdir(PATH, FUNC(ERROR)[, OPTS])                #Delete directory. OPTS:
-                                             12*#  - recursive BOOL (def: false):
-                                             12*#     - recursively on children
-                                             12*#     - no error if PATH does not exist. However, this is deprecated.
+rmdir(PATH, FUNC(ERROR)[, OPTS])                #Delete empty directory. OPTS:
                                              12*#  - maxRetries NUM (def: 0)
                                              12*#     - retry NUM times with linear backoff (starting at OPTS.retryDelay NUMms (def: 100)) on
                                              12*#       EBUSY, ENOTEMPTY, EPERM, EMFILE or ENFILE
                                              12*#     - requires OPTS.recursive true
-                                        14.14.0*#Should use fs.rm() instead
 rm(PATH, FUNC(ERROR)[, OPTS])           14.14.0*#Delete file|dir.
                                         14.14.0*#OPTS:
                                         14.14.0*#  - force BOOL: if false (def): throw if file does not exist
@@ -2489,10 +2496,12 @@ on('unhandledRejection, FUNC(VAL, PROMISE))     #When PROMISE:
 --unhandled-rejections=STR                      #What to do on 'unhandledRejection':
                                                 #  - 'strict': 'unhandledRejection' event + uncaughtException
                                                 #  - throw: 'unhandledRejection' event + (unless that event was handled) uncaughtException
-                                             14*#  - default: 'unhandledRejection' event + (unless that event was handled) warning + (once) deprecation warning
                                              14*#  - warn-with-error-code: 'unhandledRejection' event + (unless that event was handled) warning + process.exitCode 1
-                                                #  - 'warn': warning
+                                                #  - 'warn': 'unhandledRejection' event + (unless that event was handled) warning + (once) deprecation warning
                                                 #  - 'none': nothing
+                                                #Def:
+                                                #  - 'warn'
+                                             15*#  - 'throw'
 on('rejectionHandled, FUNC(PROMISE))            #When adding PROMISE.catch() on a PROMISE that:
                                                 #  - was already rejected
                                                 #  - and had no handler when it was rejected (i.e. 'unhandledRejection')
@@ -2881,6 +2890,7 @@ MESSAGEPORT.on('close', FUNC())                 #
 WORKER_THREADS.parentPort                       #Default MESSAGEPORT available in every worker.
                                                 #null in parent
 
+MessageChannel|MessagePort|MessageEvent  15.0.0*#Exposed globally
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -3054,6 +3064,7 @@ createHash(STR[, OPTS])                         #Returns a HASH, i.e. a IOSTREAM
 HASH.copy([OPTS])->HASH2                     12*#Clone. Keep state. Doe snot work if HASH already closed.
 
 createHmac(STR, STDBUFFER|KEY)                  #Same as createHash() but for a HMAC. STR is hash algo. Second argument is the key.
+                                         15.0.0*#STDBUFFER can be STDABUFFER
 createCipheriv(STR, STDBUFFER|KEY,STDBUFFER|null#Same but for a CIPHER (sym. cipher).
  [, OPTS])                                      #Key must be KEY|TDBUFFER or STR with encoding "binary".
                                                 #Third argument is IV. Can be null.
@@ -3064,14 +3075,17 @@ createCipheriv(STR, STDBUFFER|KEY,STDBUFFER|null#Same but for a CIPHER (sym. cip
                                                 #OPTS:
                                                 #  - any of STREAM.Transform()
                                                 #  - authTagLength NUM (def: 16): 4-16 (must be even number)
+                                         15.0.0*#STDBUFFER can be STDABUFFER
 CIPHER.setAutoPadding(BOOL)                     #If false (def: true), disables padding (PKCS padding).
                                                 #Use it for personalized padding, i.e. filling with nulls.
 CIPHER.getAuthTag()->BUFFER                     #Returns MAC, for sym. ciphers that produce one ("authenticated
                                                 #encryption"), i.e. "GCM" only.
 CIPHER.setAAD(BUFFER)->BUFFER2                  #Same but for "additional authenticated data" ("GCM" only)
+                                         15.0.0*#BUFFER can be STDABUFFER
 createDecipheriv(...)
 DECIPHER.setAutoPadding(BOOL)                   #Same for decryption.
 DECIPHER.setAuthTag(TDBUFFER)                   #
+                                         15.0.0*#TDBUFFER can be STDABUFFER
 DECIPHER.setAAD(BUFFER)                         #
 
 createDiffieHellman(ARGS)                       #Creates a DIFFIEHELLMAN (used for asym. encryption with HL algo).
@@ -3114,6 +3128,8 @@ public|privateEncrypt|Decrypt                   #Encrypts/decrypts asym. (RSA) T
                                                 #  - padding: CRYPTO.constants.RSA_NO|PKCS1[_OAEP]_PADDING
                                              12*#  - oaepHash STR (def: 'sha1'): algo for OAEP padding
                                              12*#  - oaepLabel TDBUFFER: label for OAEP padding
+                                         15.0.0*#    Can be STDABUFFER
+                                         15.0.0*#STR|KEY|OBJ can be STDABUFFER|KEY|OBJ
 
 generateKeyPair[Sync]('TYPE', OPTS              #Create asym key pair, where SBUFFER is publicKey and SBUFFER privateKey
  [, FUNC(ERROR, SBUFFER, SBUFFER2)])            #'TYPE' is 'rsa', 'dsa', 'ec', 'ed25519', 'ed448', 'x25519', 'x448'
@@ -3140,7 +3156,9 @@ createPrivate|PublicKey(OPTS|SBUFFER)->KEY   11*#Create asym key pair. OPTS:
                                              11*#  - format 'pem' (def) or 'der': of key
                                              11*#  - type 'pkcs1', 'spki' or (privateKey only) 'sec1': ignored if format 'pem'
                                              11*#  - passphrase SBUFFER (privateKey only)
+                                         15.0.0*#SBUFFER can be STDABUFFER
 createSecretKey(BUFFER)->KEY                 11*#Create sym key.
+                                         15.0.0*#BUFFER can be STDABUFFER
 
 diffieHellman(OPTS)->BUFFER                  12*#Compute Diffie-Hellman secret using OPTS:
                                              12*#  - privateKey KEY
@@ -3161,6 +3179,7 @@ createSign(STR)                                 #Same as createDecipher() but fo
                                                 #Includes RSA, DH, DSA, HMAC and CMAC.
                                                 #Unless createCipher(), is only a OSTREAM. To read from it, use
                                                 #SIGN.sign(SBUFFER|KEY|OPTS[, ENCODING]), where SBUFFER|OPTS|KEY is the private key.
+                                         15.0.0*#  -  SBUFFER can be STDABUFFER|KEY
                                                 #OPTS:
                                                 #  - key, format, type, passphrase: like createPrivateKey()
                                                 #  - padding CRYPTO.constants.RSA_PKCS1_[PSS_]PADDING
@@ -3178,6 +3197,7 @@ VERIFY.verify                                   #Read from createVerify()
                                                 #  - saltLength
                                              12*#  - dsaEncoding
                                                 #STDBUFFER is the signature.
+                                         15.0.0*#*BUFFER can be STDABUFFER
 sign(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS)
  ->BUFFER
 verify(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS,
@@ -3185,13 +3205,15 @@ verify(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS,
 
 Certificate()                                   #Returns CERTIFICATE, used for SPKAC, used to send certificates client-side to
                                                 #the server with the HTML5 <keygen>.
-CERTIFICATE.verifySpkac(TDBUFFER)->BOOL         #
+CERTIFICATE.verifySpkac(STDBUFFER)->BOOL
 CERTIFICATE.exportChallenge|PublicKey
 (STDBUFFER[, ENCODING])->BUFFER                 #
+                                         15.0.0*#STDBUFFER can be STDABUFFER
 
 pbkdf2[Sync](STBUFFER, STBUFFER2, NUM, NUM2,    #Generate a random BUFFER using PBKDF2 with HMAC-SHA1, with first arg being
 DIGEST[, FUNC(ERROR, BUFFER)])[->BUFFER]        #the input, second the salt (should be min. 64 bits), NUM the number of
                                                 #iterations (should be min. 1000) and NUM2 the final string length.
+                                         15.0.0*#STBUFFER can be STDABUFFER
 
 scrypt[Sync](STDBUFFER, STDBUFFER2, NUM         #Generate a derived key BUFFER using Scrypt.
  [, OPTS][, FUNC(ERROR, BUFFER)])[->BUFFER]     #First arg is the password, second is the salt (should be 16 bytes long), NUM is BUFFER length.
@@ -3201,6 +3223,7 @@ scrypt[Sync](STDBUFFER, STDBUFFER2, NUM         #Generate a derived key BUFFER u
                                                 #  - parallelization|p NUM (def: 1): parallelization
                                                 #  - maxmem NUM (def: 32MB): memory bound.
                                             <12*#    Must be > 128*N*r
+                                         15.0.0*#STDBUFFER can be STDABUFFER
 
 randomBytes(NUM[, FUNC(ERROR, BUFFER)])         #Generates random BUFFER of length NUM
                                                 #Is cryptographically secure (e.g. from /dev/random)
@@ -3217,6 +3240,7 @@ getFips()->BOOL                                 #True if Node has been:
 setFips(BOOL)                                   #
 
 timingSafeEqual(TDBUFFER, TDBUFFER2)->BOOL      #Like TDBUFFER.equals(TDBUFFER2), but protected against timing attacks
+                                         15.0.0*#TDBUFFER can be STDABUFFER
 
 
                                              /=+===============================+=\
@@ -3242,8 +3266,9 @@ ASSERTIONERROR.operator                         #'==' (equal|ok()) or '!=' (notE
                                                 #'throw|doesNotThrow|reject|doesNotReject', 'FUNC' (others)
 
 ASSERT.strict.*(...)                            #Same as ASSERT.*(...) except:
-                                                #  - use == instead of ===
+                                                #  - use === instead of ==
                                                 #  - when arguments are OBJ, prints an OBJ diff instead of showing them in full
+require('assert/strict')                 15.0.0*#Same as ASSERT.strict
 
 ASSERT.fail()                                   #Always fails
 
@@ -3444,6 +3469,7 @@ inspect(VAL[, OBJ])                             #Print function used by repl. Re
                                                 #  - maxArrayLength NUM (def: 100) (null for infinite)
                                              12*#  - maxStringLength NUM (def: Infinity) (Infinity|null for infinite):
                                                 #    truncate any STR with ellipsis
+                                         15.0.0*#    Def: 1e4
                                                 #  - breakLength NUM (def: 60) (can be Infinity): maxlength to print OBJ in multiline
                                                 #  - compact BOOL|NUM:
                                                 #     - if false:
