no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -5,6 +5,11 @@
 
 
 
+Todo:
+  - document http/2
+  - document quic (including NET.createQuicSocket())
+
+
                                              /=+===============================+=\
                                             /  :                               :  \
                                             )==:         COMMAND LINE          :==(
@@ -13,14 +18,18 @@
 
 
 To document:
-  - timers/promises
   - AbortController, AbortSignal
   - MessageChannel, MessageEvent, MessagePort
+  - timers/promises
+  - stream/promises
   - --node-memory-debug
   - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
-  - fix log-process-errors for new unhandled rejections behavior
   - NET.blockList
   - NET.createQuicSocket(), Quic
+  - fix my repos:
+     - log-process-errors for new unhandled rejections behavior
+     - add TODO for timers/promises
+     - add TODO for stream/promises
 
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
@@ -1892,6 +1901,7 @@ RESOLVER.cancel()                               #Cancel all current resolve*|rev
 
 promises.*(...)                                 #Like DNS.*(...) except returns PROMISE and no RESOLVER.cancel()
                                                 #No more experimental warning
+require('dns/promises')                  15.0.0*#Same as DNS.promises
 
 
                                              /=+===============================+=\
@@ -2829,6 +2839,7 @@ new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
                                              12*#        - codeRangeSizeMb NUM: code max size
                                         12.19.0*#        - stackSizeMb NUM (def: 4): stack max size
                                         12.19.0*#  - trackUnmanagedFds BOOL (def: false): on exit, automatically call any FD_INT if FS.close() was not called
+                                         15.0.0*#    def: true
 
 global.*                                        #In worker, like in parent except process.*:
                                                 #  - exit() affects current thread not current process
