no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -18,14 +18,12 @@ Todo:
 
 
 To document:
-  - AbortController, AbortSignal
-  - MessageChannel, MessageEvent, MessagePort
   - timers/promises
+  - MessageChannel, MessageEvent, MessagePort
   - stream/promises
   - --node-memory-debug
-  - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
   - NET.blockList
-  - NET.createQuicSocket(), Quic
+  - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
   - fix my repos:
      - log-process-errors for new unhandled rejections behavior
      - add TODO for timers/promises
@@ -90,6 +88,9 @@ queueMicrotask(FUNC())                       11*#Add a new microtask (see JavaSc
 process.nextTick(FUNC()[, ...])                 #Add a new microtask (see JavaScript doc)
                                                 #As opposed to queueMicrotask(), always processed before other microtasks,
                                                 #including when calling itself recursively.,
+
+new AbortController()                    15.0.0*#Like DOM
+new AbortSignal()                        15.0.0*#Like DOM. Child of EventTarget
 
 
                                              /=+===============================+=\
