no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -18,6 +18,7 @@ Todo:
 
 
 To document:
+  - cancelling timers
   - timers/promises
   - MessageChannel, MessageEvent, MessagePort
   - stream/promises
@@ -25,7 +26,6 @@ To document:
   - NET.blockList
   - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
   - fix my repos:
-     - log-process-errors for new unhandled rejections behavior
      - add TODO for timers/promises
      - add TODO for stream/promises
 
@@ -91,6 +91,13 @@ process.nextTick(FUNC()[, ...])                 #Add a new microtask (see JavaSc
 
 new AbortController()                    15.0.0*#Like DOM
 new AbortSignal()                        15.0.0*#Like DOM. Child of EventTarget
+
+require('timers/promises')               15.0.0*#
+setTimeout(NUM[, VAL[, OPTS]])->PROMISE  15.0.0*#Resolves to VAL (def: undefined) after NUMms.
+setImmediate([VAL[, OPTS]])->PROMISE     15.0.0*#OPTS:
+                                         15.0.0*#  - ref BOOL (def: true): yield macrotask
+                                         15.0.0*#  - signal ABORT_SIGNAL: on 'abort', reject PROMISE with AbortError
+                                         15.0.0*#Those OPTS are available to promisify(setTimeout|setImmediate) too
 
 
                                              /=+===============================+=\
