no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -18,16 +18,11 @@ Todo:
 
 
 To document:
-  - cancelling timers
-  - timers/promises
-  - MessageChannel, MessageEvent, MessagePort
   - stream/promises
+     - add TODO in my repos
   - --node-memory-debug
   - NET.blockList
   - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
-  - fix my repos:
-     - add TODO for timers/promises
-     - add TODO for stream/promises
 
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
@@ -2903,13 +2898,18 @@ WORKER.markAsUntransferable(VAL2)       12.19.0*#If VAL2 is passed to postMessag
 
 new MessageChannel()
 MESSAGECHANNEL.port1|2
-MESSAGEPORT.start|close()                       #Like DOM
-MESSAGEPORT.on('close', FUNC())                 #
+new MessagePort()
+MESSAGEPORT.postMessage(VAL[, VAL2_ARR])
+MESSAGEPORT.on('message', FUNC(MESSAGEEVENT))
+MESSAGEPORT.start|close()
+MESSAGEPORT.[un]ref()
+MESSAGEPORT.on('close', FUNC())                 #Like DOM, except MessagePort is an EventEmitter instead of EventTarget
+                                         15.0.0*#Exposed globally
+MESSAGEPORT.on('messageerror', FUNC(ERROR))
+                                        12.19.0*#
 
 WORKER_THREADS.parentPort                       #Default MESSAGEPORT available in every worker.
                                                 #null in parent
-
-MessageChannel|MessagePort|MessageEvent  15.0.0*#Exposed globally
 
                                              /=+===============================+=\
                                             /  :                               :  \
