no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -6,6 +6,7 @@
 
 
 Todo:
+  - document CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
   - document http/2
   - document quic (including NET.createQuicSocket())
 
@@ -16,13 +17,6 @@ Todo:
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
-
-To document:
-  - stream/promises
-     - add TODO in my repos
-  - --node-memory-debug
-  - NET.blockList
-  - CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
 
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
@@ -64,7 +58,7 @@ npm                                             #Node packet manager (see doc)
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:          EVENT QUEUE          :==(
+                                            )==:            TIMERS             :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
@@ -213,6 +207,8 @@ ASYNC_LOCAL_STORAGE.exit                     12*#Opposite
 IRON-NODE ==>                                  ##Another way to debug is to use Electron.
 JAM3 DEVTOOL ==>                               ##Those two apps do this
                                                ##There are many problems I encountered with those, so I prefer node --inspect
+
+--node-memory-debug                      15.0.0*#Add some low-level memory debug messages
 
 
                                              /=+===============================+=\
@@ -939,6 +935,8 @@ pipeline(SRC[, TRANSFORM...], DEST,             #Like SRC.pipe(TRANSFORM)....pip
                                                 #Can use ARR of arguments [SRC, TRANSFORM..., DEST] instead of variadic arguments
 PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0) without iterable support
 
+promises.*
+require('stream/promises').*             15.0.0*#Promisified version of finished|pipeline()
 
 IOSTREAM ==>                                    #Implement both ISTREAM and OSTREAM. Actually called either:
                                                 #  - STREAM.Duplex
@@ -1298,7 +1296,6 @@ TCPSERVER.maxConnections                        #Def: null
                                                 #Above that, will refuse connections.
 TCPSERVER.getConnections([FUNC(ERROR, UINT)])   #Number of connections
 
-
 connect|createConnection(OPTS[, FUNC()])        #Same as new Socket(OPTS) followed by TCPSOCKET.connect(OPTS, FUNC)
   ->TCPSOCKET                                   #OPTS can also have:
                                                 #  - timeout NUM: calls TCPSOCKET.setTimeout(NUM)
@@ -1372,6 +1369,22 @@ TCPSOCKET.local|remotePort|Address              #
 TCPSOCKET.remoteFamily                          #'IPv4|6'
 isIp('ADDR')->0|4|6                             #
 isIpv4|6('ADDR')->BOOL                          #
+
+new BlockList()                          15.0.0*#
+BLOCKLIST.rules                          15.0.0*#Read-only STR_ARR among:
+                                         15.0.0*#  - 'Address: TYPE ADDRESS'
+                                         15.0.0*#  - 'Range: TYPE ADDRESS-ADDRESS2'
+                                         15.0.0*#  - 'Subnet: TYPE ADDRESS/CIDR'
+                                         15.0.0*#TYPE is 'ipv4|ipv6'
+                                         15.0.0*#The following methods add to it.
+BLOCKLIST.addAddress
+ ('ADDRESS'[, 'TYPE'])                   15.0.0*#
+BLOCKLIST.addRange
+ ('ADDRESS', 'ADDRESS2'[, 'TYPE'])       15.0.0*#
+BLOCKLIST.addSubnet
+ ('ADDRESS', CIDR_NUM[, 'TYPE'])         15.0.0*#
+BLOCKLIST.check('ADDRESS'[, 'TYPE'])
+ ->BOOL                                  15.0.0*#True if ADDRESS match at least one BLOCKLIST.rules
 
 
                                              /=+===============================+=\
