--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #15.0.1 (current), 13.14.0 (current), 12.19.0 (active LTS), 10.22.1 (active LTS)
+VERSION ==>                                     #15.0.1 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
